fixed blank image not showing up in edit view and further progress on home page styling to support images

--- a/src/app/home/home.bar.graph.component.css
+++ b/src/app/home/home.bar.graph.component.css
@@ -1,5 +1,5 @@
 .row {
-    padding-top: 100px;
+    padding: 15px !important;
 }
 
 .bar-container {
@@ -10,4 +10,13 @@
 .bar-description {
     height: 400px;
     overflow-y: scroll;
+}
+
+img {
+    width: 140px;
+    height: 140px;
+}
+
+.image-border {
+    left: 1px;
 }
