--- a/src/app/home/home.grid.component.css
+++ b/src/app/home/home.grid.component.css
@@ -2,6 +2,8 @@
     height: 200px !important;
     margin-top: 0px !important;
     margin-bottom: 0px !important;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
 }
 
 .row {
@@ -15,4 +17,16 @@
     max-width: 1500px !important;
     height: 600px;
     border: 1px solid black;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+}
+
+.pop-in {
+    z-index: 200;
+    position: absolute;
+    top: 0px;
 }
